--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,11 +42,17 @@ nav#navbar a:hover {
   color: white;
 }
 
+nav#navbar i:hover {
+  color: black;
+}
+
 a.nav-self {
   float: left;
 }
 
-nav#navbar a.nav-ico i {
+
+
+nav#navbar a.nav-ico i  {
   float: left;
   padding: 4px;
   font-size: 25px;
