--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,32 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); }
-  .project-card__links ul {
-    list-style: none; }
+  .project-card__links {
+    margin: 2rem;
+    font-size: 3rem; }
+    .project-card__links a:link,
+    .project-card__links a:active,
+    .project-card__links a:visited {
+      color: #323232; }
+    .project-card__links a:hover {
+      color: #4c4c4c; }
+    .project-card__links ul {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      list-style: none; }
   .project-card__tech ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    text-align: center;
+    grid-gap: 5px;
+    padding: .4rem;
     list-style: none; }
+    .project-card__tech ul .tech-item {
+      background-color: #323232;
+      color: white;
+      padding: .3rem;
+      border-radius: .5rem; }
 
 footer {
   font-size: 1.2rem; }
