--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -21,7 +21,13 @@ body {
     color: white; }
 
 .project-card__title {
-  font-size: 1.8rem; }
+  font-size: 1.6rem; }
+
+.project-card__desc {
+  font-size: 1.2rem; }
+
+footer {
+  font-size: 1.2rem; }
 
 * {
   padding: 0;
@@ -35,15 +41,11 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(5, 1fr);
-  width: 200px;
+  max-width: 200px;
+  max-height: 400px;
   border: 2px solid #323232;
   border-radius: 5px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); }
   .project-card__links {
     margin: 2rem;
     font-size: 3rem; }
@@ -72,15 +74,24 @@ body {
       border-radius: .5rem; }
 
 footer {
-  font-size: 1.2rem; }
+  height: 5vh;
+  border-right: 2px solid #323232; }
+
+.html {
+  max-height: 1080px; }
 
 .container {
   display: grid;
   grid-template-columns: 400px 1fr;
-  height: 100vh; }
+  overflow: hidden; }
 
 .profile {
-  padding: 2rem; }
+  display: grid;
+  justify-items: center;
+  align-content: center;
+  padding: 2rem;
+  border-right: 2px solid #323232;
+  height: 95vh; }
   .profile .hr {
     background-color: #323232;
     width: 30%;
@@ -122,3 +133,12 @@ footer {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       list-style: none; }
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  justify-content: center;
+  align-content: center;
+  margin: 0 3rem; }
+  .projects .project-card {
+    justify-self: center; }
