--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -115,7 +115,7 @@ footer {
     grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     text-align: center;
-    grid-gap: 5px;
+    grid-gap: 1rem;
     list-style: none; }
     .profile__skills-list .skills-item {
       background-color: #323232;
