--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -82,7 +82,7 @@ footer {
 
 .container {
   display: grid;
-  grid-template-columns: 400px 1fr;
+  grid-template-columns: 450px 1fr;
   overflow: hidden; }
 
 .profile {
@@ -122,7 +122,6 @@ footer {
       padding: .3rem;
       border-radius: .5rem; }
   .profile__links {
-    padding: 0 1rem;
     margin: 2rem; }
     .profile__links a:link,
     .profile__links a:active,
@@ -134,6 +133,8 @@ footer {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       list-style: none; }
+    .profile__links i {
+      padding: 0 2rem; }
 
 .projects {
   display: grid;
