--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -46,6 +46,8 @@ footer {
   border: 2px solid #323232;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); }
+  .project-card__img {
+    width: 100%; }
   .project-card__links {
     margin: 2rem;
     font-size: 3rem; }
