--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ footer {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(5, 1fr);
-  max-width: 200px;
+  max-width: 300px;
   max-height: 400px;
   border: 2px solid #323232;
   border-radius: 5px;
@@ -144,9 +144,10 @@ footer {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   justify-content: center;
-  align-content: center;
-  margin: 0 3rem; }
+  align-content: start;
+  max-width: 1000px;
+  padding: 2rem; }
   .projects .project-card {
     justify-self: center; }
