--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -144,7 +144,7 @@ footer {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 320px));
   justify-content: center;
   align-content: start;
   max-width: 1000px;
