updated mobile responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  color: #fff;
+  color: #323232;
   text-align: center; }
 
 .profile {
@@ -38,7 +38,7 @@ html {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(5, 1fr);
-  color: #fff;
+  color: #323232;
   background-color: #0d9ff5;
   max-width: 300px;
   max-height: 400px;
@@ -52,6 +52,7 @@ html {
   .project-card__img img {
     max-width: 250px;
     padding: 2rem 0;
+    background-color: #323232;
     border: 2px solid #323232;
     border-radius: 5px; }
   .project-card__desc p {
@@ -86,17 +87,29 @@ html {
       border-radius: .5rem; }
 
 footer {
+  font-size: 1.4rem;
+  width: 450px;
   height: 5vh;
   border-right: 2px solid #323232;
   background-color: #0d9ff5; }
+  footer p {
+    margin: 2rem; }
+  @media (max-width: 576px) {
+    footer {
+      border-top: 2px solid #323232; } }
 
 .html {
-  max-height: 1080px; }
+  min-height: 100vh; }
 
 .container {
   display: grid;
   grid-template-columns: 450px 1fr;
   overflow: hidden; }
+  @media (max-width: 576px) {
+    .container {
+      grid-template-columns: 375px;
+      grid-template-rows: repeat(auto-fit);
+      justify-items: center; } }
 
 .profile {
   display: grid;
@@ -106,6 +119,9 @@ footer {
   border-right: 2px solid #323232;
   height: 95vh;
   background-color: #0d9ff5; }
+  @media (max-width: 576px) {
+    .profile {
+      border-bottom: 2px solid #323232; } }
   .profile .hr {
     background-color: #323232;
     width: 30%;
@@ -160,3 +176,14 @@ footer {
   padding: 2rem; }
   .projects .project-card {
     justify-self: center; }
+
+@media (max-width: 576px) {
+  .projects {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-content: center;
+    max-width: 100%;
+    padding: 2rem; }
+    .projects .project-card {
+      justify-self: center; } }
