--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,15 @@
 footer {
+  font-size: 1.4rem;
+  width: 450px;
   height: 5vh;
   border-right: 2px solid $clr-black;
   background-color: $clr-blue;
+
+  p {
+    margin: 2rem;
+  }
+
+  @media (max-width: 576px) {
+    border-top: 2px solid $clr-black;
+  }
 }
