--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -1,11 +1,17 @@
 .html {
-  max-height: 1080px;
+  min-height: 100vh;
 }
 
 .container {
   display: grid;
   grid-template-columns: 450px 1fr;
   overflow: hidden;
+
+  @media (max-width: 576px) {
+    grid-template-columns: 375px;
+    grid-template-rows: repeat(auto-fit);
+    justify-items: center;
+  }
 }
 
 .profile {
@@ -16,6 +22,10 @@
   border-right: 2px solid $clr-black;
   height: 95vh;
   background-color: $clr-blue;
+
+  @media (max-width: 576px) {
+    border-bottom: 2px solid $clr-black;
+  }
 
   .hr {
     background-color: $clr-black;
@@ -93,6 +103,15 @@
   align-content: start;
   max-width: 1000px;
   padding: 2rem;
+
+  @media (max-width: 576px) {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-content: center;
+    max-width: 100%;
+    padding: 2rem;
+  }
 
   .project-card {
     justify-self: center;
