--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -10,9 +10,16 @@ body {
 .profile {
   font-size: 1.6rem; }
   .profile__name {
-    font-size: 2.8rem; }
+    font-size: 2.8rem;
+    letter-spacing: .3rem;
+    text-transform: uppercase; }
   .profile__title {
-    font-size: 1.8rem; }
+    font-size: 1.8rem;
+    letter-spacing: .2rem;
+    text-transform: uppercase; }
+  .profile__intro {
+    font-size: 1.8rem;
+    font-weight: 600; }
   .profile__links {
     font-size: 2.8rem; }
   .profile__skills-title {
@@ -38,6 +45,7 @@ html {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(5, 1fr);
+  justify-items: center;
   color: #323232;
   background-color: #0d9ff5;
   max-width: 300px;
@@ -46,21 +54,24 @@ html {
   border: 2px solid #323232;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); }
-  .project-card__title h2 {
+  .project-card__title {
     font-size: 1.6rem;
     margin-bottom: 1rem; }
-  .project-card__img img {
+  .project-card__img {
+    display: block;
     max-width: 250px;
     padding: 2rem 0;
     background-color: #323232;
     border: 2px solid #323232;
     border-radius: 5px; }
-  .project-card__desc p {
+  .project-card__desc {
     font-size: 1.4rem;
     margin-top: 1rem; }
   .project-card__links {
     margin: .5rem;
     font-size: 3rem; }
+    .project-card__links .project-card__icon {
+      margin: 0 1rem; }
     .project-card__links a:link,
     .project-card__links a:active,
     .project-card__links a:visited {
@@ -150,7 +161,7 @@ footer {
     list-style: none; }
     .profile__skills-list .skills-item {
       background-color: #323232;
-      padding: .3rem;
+      padding: .8rem;
       border-radius: .5rem; }
   .profile__links {
     margin: 2rem; }
