--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -63,12 +63,12 @@
     grid-gap: .5rem;
     margin-top: 1rem;
     list-style: none;
+  }  
 
-    .skills-item {
+  &__skills-item {
       background-color: $clr-black;
       padding: .8rem;
       border-radius: .5rem;
-    }
   }
 
   &__links {
