--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -6,26 +6,18 @@
   display: grid;
   grid-template-columns: 450px 1fr;
   overflow: hidden;
-
-  @media (max-width: 576px) {
-    grid-template-columns: 375px;
-    grid-template-rows: repeat(auto-fit);
-    justify-items: center;
-  }
 }
 
 .profile {
   display: grid;
+  grid-template-columns: 1fr;
+  grid-column: 1 / -1;
   justify-items: center;
   align-content: center;
   padding: 2rem;
   border-right: 2px solid $clr-black;
   height: 95vh;
   background-color: $clr-blue;
-
-  @media (max-width: 576px) {
-    border-bottom: 2px solid $clr-black;
-  }
 
   .hr {
     background-color: $clr-black;
@@ -103,15 +95,6 @@
   align-content: start;
   max-width: 1000px;
   padding: 2rem;
-
-  @media (max-width: 576px) {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-content: center;
-    align-content: center;
-    max-width: 100%;
-    padding: 2rem;
-  }
 
   .project-card {
     justify-self: center;
