--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,11 +1,19 @@
-footer {
+.footer {
   font-size: 1.4rem;
-  width: 450px;
+  width: 100%;
   height: 5vh;
   border-right: 2px solid $clr-black;
   background-color: $clr-blue;
 
-  p {
-    margin: 2rem;
+  &__copyright {
+    padding: 1rem 0;
+  }
+}
+
+@media (max-width: 750px) {
+  .footer {
+    width: 100%;
+    border-right: 0;
+    border-top: 2px solid $clr-black;
   }
 }
