--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -1,7 +1,3 @@
-.html {
-  min-height: 100vh;
-}
-
 .container {
   display: grid;
   grid-template-columns: 450px 1fr;
@@ -11,7 +7,7 @@
 .profile {
   display: grid;
   grid-template-columns: 1fr;
-  grid-column: 1 / -1;
+  grid-column: 1 / -2;
   justify-items: center;
   align-content: center;
   padding: 2rem;
@@ -44,13 +40,15 @@
   }
 
   &__skills {
+    width: 100%;
     margin: 2rem;
   }
 
   &__skills-list {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     justify-content: center;
+    width: 100%;
     text-align: center;
     grid-gap: .5rem;
     margin-top: 1rem;
@@ -65,6 +63,10 @@
 
   &__links {
     margin: 2rem;
+
+    &-item {
+      width: 100%;
+    }
 
     & a:link,
     & a:active,
@@ -88,15 +90,46 @@
   }
 }
 
+@media (max-width: 750px) {
+  .container {
+    grid-template-columns: minmax(200px, 750px);
+  }
+
+  .profile {
+    grid-template-columns: minmax(200px, 750px);
+    grid-column: 1 / -1;
+    border-right: 0;
+    height: 100%;
+    border-bottom: 2px solid $clr-black;
+
+    &__skills {
+      grid-template-columns: repeat(auto-fit, minmax(85px, 1fr));
+    }
+
+    &__links {
+      margin-bottom: 2rem 1rem;
+    }  
+  }
+}
+
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 320px));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   justify-content: center;
   align-content: start;
-  max-width: 1000px;
+  max-width: 100%;
   padding: 2rem;
 
   .project-card {
-    justify-self: center;
+    justify-self: start;
+  }
+}
+
+@media (max-width: 750px) {
+  .projects {
+    
+    .project-card {
+      justify-self: center;
+    }
   }
 }
